--- a/content/publication/IROS2011.md
+++ b/content/publication/IROS2011.md
@@ -1,4 +1,5 @@
 +++
+abstract = ""
 abstract_short = ""
 authors = ["Xiaochen Zhang ,Yi Sun, Jizhong Xiao and Flavio Cabrera-Mora"]
 date = "2011-06-29"
